language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_if.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_if.move:3:9 ───
   │
 7 │     0x0::Transaction::assert(*move ref == 5, 42);
   │                               ^^^^^^^^ Invalid usage of local 'ref'
   ·
 3 │     let ref;
   │         --- The local might not have a value due to this position. The local must be assigned a value before being used
   │

