language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_if.move
script {
fun main() {
    let x = 5;
    let ref;
    if (true) {
        ref = &x;
    };
    0x0::Transaction::assert(*move ref == 5, 42);
}
}

// check: MOVELOC_UNAVAILABLE_ERROR
